new files added

--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="index.js"></script>
+    <!-- <script src="tut2.js"></script> -->
+    <!-- <script src="tut3.js"></script> -->
+    <!-- <script src="tut4.js"></script> -->
+    <!-- <script src="tut5.js"></script> -->
+    <script src="tut7.js"></script>
+    
 </head>
 <body>
-    
+    <!-- <script src="tut6.js"></script> -->
+    <h1>This is my Body</h1>
 </body>
 </html>
