--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <!-- <script src="tut3.js"></script> -->
     <!-- <script src="tut4.js"></script> -->
     <!-- <script src="tut5.js"></script> -->
-    <script src="tut7.js"></script>
+    <!-- <script src="tut7.js"></script> -->
+    <script src="tut8.js"></script>
     
 </head>
 <body>
