--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,11 +10,15 @@
     <!-- <script src="tut4.js"></script> -->
     <!-- <script src="tut5.js"></script> -->
     <!-- <script src="tut7.js"></script> -->
-    <script src="tut8.js"></script>
-    
+    <!-- <script src="tut8.js"></script> -->
+    <!-- <script src="tut9.js"></script> -->
+    <script src="tut10.js"></script>
+
 </head>
+
 <body>
     <!-- <script src="tut6.js"></script> -->
     <h1>This is my Body</h1>
 </body>
+
 </html>
