--- a/Advance/website.html
+++ b/Advance/website.html
@@ -21,8 +21,14 @@
         <input type="text">
         <input type="button" value="Search">
     </form>
-    
+    <form action="">
+        <a href="https://javascript.com/">GitHub</a>
+        <input type="text">
+        <input type="button" value="Search">
+    </form>
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.forbes.com%2Fsites%2Fjimgorzelany%2F2019%2F07%2F23%2Fhere-are-the-coolest-new-cars-for-2020%2F&psig=AOvVaw1FF0Hz9Dr5CsbLkkkigFU-&ust=1614281727120000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPCQxJqig-8CFQAAAAAdAAAAABAD" alt="">
 </body>
-<script src="tut12.js"></script>
+<!-- <script src="tut12.js"></script> -->
+<script src="tut13.js"></script>
 
 </html>
