--- a/Advance/website.html
+++ b/Advance/website.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Hi, I'm Muhammad Saeed</h1>
-    <div>
-        <div class="child">Container</div>
+    <h1 id="heading">Hi, I'm Muhammad Saeed</h1>
+    <div class="container">
         <div class="child">Child 1</div>
         <div class="child">Child 2</div>
         <div class="child">Child 3</div>
         <div class="child">Child 4</div>
     </div>
 
-    <form action="">
+    </div>
+
+    <form id="form" class="formStyle" action="">
         <a href="https://github.com/mh-saeed">My GitHub Profile</a>
         <input type="text">
         <input type="button" value="Search">
     </form>
-    <form action="">
+    <form id="form" action="">
         <a href="https://javascript.com/">GitHub</a>
         <input type="text">
         <input type="button" value="Search">
     </form>
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.forbes.com%2Fsites%2Fjimgorzelany%2F2019%2F07%2F23%2Fhere-are-the-coolest-new-cars-for-2020%2F&psig=AOvVaw1FF0Hz9Dr5CsbLkkkigFU-&ust=1614281727120000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPCQxJqig-8CFQAAAAAdAAAAABAD" alt="">
+
 </body>
 <!-- <script src="tut12.js"></script> -->
-<script src="tut13.js"></script>
+<!-- <script src="tut13.js"></script> -->
+
+<script src="tut14.js"></script>
 
 </html>
