--- a/Advance/website.html
+++ b/Advance/website.html
@@ -34,6 +34,6 @@
 <!-- <script src="tut12.js"></script> -->
 <!-- <script src="tut13.js"></script> -->
 
-<script src="tut14.js"></script>
+<script src="tut14_DOM_Selectors.js"></script>
 
 </html>
