--- a/Advance/website.html
+++ b/Advance/website.html
@@ -31,8 +31,8 @@
     </form>
 
 </body>
-<!-- <script src="tut12.js"></script> -->
-<!-- <script src="tut13.js"></script> -->
+<!-- <script src="tut12_DOM&WebsiteLayout.js"></script> -->
+<!-- <script src="tut13_Exercise.js"></script> -->
 
 <script src="tut14_DOM_Selectors.js"></script>
 
