--- a/Basic/index.html
+++ b/Basic/index.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <script src="tut2.js"></script> -->
-    <!-- <script src="tut3.js"></script> -->
-    <!-- <script src="tut4.js"></script> -->
-    <!-- <script src="tut5.js"></script> -->
-    <!-- <script src="tut7.js"></script> -->
-    <!-- <script src="tut8.js"></script> -->
+    <!-- <script src="tut2_ConsoleLogs,Errors,Warnings .js"></script> -->
+    <!-- <script src="tut3_Var,Let,Cons.js"></script> -->
+    <!-- <script src="tut4_DataTypes,ObjectLiterals.js"></script> -->
+    <!-- <script src="tut5_TypeConersion&Coercion.js"></script> -->
+    <!-- <script src="tut7_Arrays&Objects.js"></script> -->
+    <!-- <script src="tut8_IfElse&Switches.js"></script> -->
     <!-- <script src="tut9.js"></script> -->
-    <script src="tut10.js"></script>
+    <script src="tut10_Functions.js"></script>
 
 </head>
 
 <body>
-    <!-- <script src="tut6.js"></script> -->
+    <!-- <script src="tut6_StringFunctions&Properties,TemplateLiterals.js"></script> -->
     <h1>This is my Body</h1>
 </body>
 
