--- a/Advance/website.html
+++ b/Advance/website.html
@@ -11,12 +11,21 @@
 <body>
     <h1 id="heading">Hi, I'm Muhammad Saeed</h1>
     <div class="container">
+        <ul class="list">
+            <li class="liChilds">
+                <div class="1stulChil">
+
+                </div>
+            </li>
+            <li class="liChilds"> </li>
+            <li class="liChilds"> </li>
+            <li class="liChilds"> </li>
+        </ul>
+        </ul>
         <div class="child">Child 1</div>
         <div class="child">Child 2</div>
         <div class="child">Child 3</div>
         <div class="child">Child 4</div>
-    </div>
-
     </div>
 
     <form id="form" class="formStyle" action="">
@@ -34,6 +43,7 @@
 <!-- <script src="tut12_DOM&WebsiteLayout.js"></script> -->
 <!-- <script src="tut13_Exercise.js"></script> -->
 
-<script src="tut14_DOM_Selectors.js"></script>
+<!-- <script src="tut14_DOM_Selectors.js"></script> -->
+<script src="tut15_ChildrenParent&TraversingTheDOM.js"></script>
 
 </html>
