--- a/Advance/website.html
+++ b/Advance/website.html
@@ -44,6 +44,7 @@
 <!-- <script src="tut13_Exercise.js"></script> -->
 
 <!-- <script src="tut14_DOM_Selectors.js"></script> -->
-<script src="tut15_ChildrenParent&TraversingTheDOM.js"></script>
+<!-- <script src="tut15_ChildrenParent&TraversingTheDOM.js"></script> -->
+<script src="tut16_CreatingRemoving&ReplacingElements.js"></script>
 
 </html>
