--- a/Advance/website.html
+++ b/Advance/website.html
@@ -11,15 +11,16 @@
 <body>
     <h1 id="heading">Hi, I'm Muhammad Saeed</h1>
     <div class="container">
-        <ul class="list">
-            <li class="liChilds">
+        <ul class="list" id="mylist">
+            <li class="liChilds" id="fli">
+                1st child
                 <div class="1stulChil">
-
+                    => child of first child of ul
                 </div>
             </li>
-            <li class="liChilds"> </li>
-            <li class="liChilds"> </li>
-            <li class="liChilds"> </li>
+            <li class="liChilds">My </li>
+            <li class="liChilds">Name is </li>
+            <li class="liChilds" id="lchild">Muhammad Saeed </li>
         </ul>
         </ul>
         <div class="child">Child 1</div>
