tut 17 file added

--- a/Advance/website.html
+++ b/Advance/website.html
@@ -34,10 +34,11 @@
         <input type="text">
         <input type="button" value="Search">
     </form>
+
     <form id="form" action="">
-        <a href="https://javascript.com/">GitHub</a>
-        <input type="text">
-        <input type="button" value="Search">
+        <a href="https://javascript.com/">JavaScript</a>
+        <input id="myText" type="text" value="https://codewithharry.com/videos/">
+        <input id="search" type="button" value="Search">
     </form>
 
 </body>
@@ -46,6 +47,7 @@
 
 <!-- <script src="tut14_DOM_Selectors.js"></script> -->
 <!-- <script src="tut15_ChildrenParent&TraversingTheDOM.js"></script> -->
-<script src="tut16_CreatingRemoving&ReplacingElements.js"></script>
+<!-- <script src="tut16_CreatingRemoving&ReplacingElements.js"></script> -->
+<script src="tut17_Events&EventsObject.js"></script>
 
 </html>
