--- a/Advance/website.html
+++ b/Advance/website.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1 id="heading">Hi, I'm Muhammad Saeed</h1>
+    <h1 id="heading" class="myHeading firstHeading">Hi, I'm Muhammad Saeed</h1>
     <div class="container">
         <ul class="list" id="mylist">
             <li class="liChilds" id="fli">
