--- a/Advance/website.html
+++ b/Advance/website.html
@@ -29,13 +29,13 @@
         <div class="child">Child 4</div>
     </div>
 
-    <form id="form" class="formStyle" action="">
+    <form id="form1" class="formStyle" action="">
         <a href="https://github.com/mh-saeed">My GitHub Profile</a>
         <input type="text">
-        <input type="button" value="Search">
+        <input type="button" id="button" value="Search">
     </form>
 
-    <form id="form" action="">
+    <form id="form2" action="">
         <a href="https://javascript.com/">JavaScript</a>
         <input id="myText" type="text" value="https://codewithharry.com/videos/">
         <input id="search" type="button" value="Search">
@@ -48,6 +48,7 @@
 <!-- <script src="tut14_DOM_Selectors.js"></script> -->
 <!-- <script src="tut15_ChildrenParent&TraversingTheDOM.js"></script> -->
 <!-- <script src="tut16_CreatingRemoving&ReplacingElements.js"></script> -->
-<script src="tut17_Events&EventsObject.js"></script>
+<!-- <script src="tut17_Events&EventsObject.js"></script> -->
+<script src="tut_18_Events.js"></script>
 
 </html>
