--- a/Advance/website.html
+++ b/Advance/website.html
@@ -49,6 +49,7 @@
 <!-- <script src="tut15_ChildrenParent&TraversingTheDOM.js"></script> -->
 <!-- <script src="tut16_CreatingRemoving&ReplacingElements.js"></script> -->
 <!-- <script src="tut17_Events&EventsObject.js"></script> -->
-<script src="tut_18_Events.js"></script>
+<!-- <script src="tut_18_Events.js"></script> -->
+<script src="tut_20_Storage.js"></script>
 
 </html>
