--- a/Advance/website.html
+++ b/Advance/website.html
@@ -49,7 +49,6 @@
 <!-- <script src="tut15_ChildrenParent&TraversingTheDOM.js"></script> -->
 <!-- <script src="tut16_CreatingRemoving&ReplacingElements.js"></script> -->
 <!-- <script src="tut17_Events&EventsObject.js"></script> -->
-<!-- <script src="tut_18_Events.js"></script> -->
-<script src="tut_20_Storage.js"></script>
-
+<!-- <script src="tut18_Events.js"></script> -->
+<!-- <script src="tut20_Storage.js"></script> -->
 </html>
