--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -26,7 +26,7 @@
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <input class="form-control me-2" id="searchTxt" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
             </div>
@@ -47,14 +47,14 @@
         <h1>Your Notes</h1>
         <hr>
         <div id="notes" class="row container-fluid">
-            <div class="noteCard my-2 mx-2 card" style="width: 18rem;">
+            <!-- <div class="noteCard my-2 mx-2 card" style="width: 18rem;">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                         card's content.</p>
                     <a href="#" class="btn btn-primary">Delete</a>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 
@@ -64,6 +64,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ"
         crossorigin="anonymous"></script>
+        <script src="js/app.js"></script>
+
 </body>
 
 </html>
