--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -26,7 +26,8 @@
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <input class="form-control me-2" id="searchTxt" type="search" placeholder="Search" aria-label="Search">
+                    <input class="form-control me-2" id="searchTxt" type="search" placeholder="Search"
+                        aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
             </div>
@@ -36,9 +37,15 @@
         <h1>Welcome To Magic Notes</h1>
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title">Add a note</h5>
-                <div class="input-group">
-                    <textarea class="form-control" aria-label="With textarea" rows="3" id="addTxt"></textarea>
+                <h5 class="card-title">CREATE NOTES</h5>
+                <div class="form-floating">
+                    <input type="text" class="form-control my-3 addTitle" id="floatingPassword" placeholder="text">
+                    <label for="floatingPassword">Note Title</label>
+                </div>
+                <div class="form-floating">
+                    <textarea class="form-control addTxt" aria-label="With textarea" rows="3"
+                        id="floatingTextarea" placeholder="discription" style="height: 100px;"></textarea>
+                    <label for="floatingTextarea">Discription</label>
                 </div>
                 <button class="btn btn-primary my-3" id="addBtn">Add Notes</button>
             </div>
@@ -47,14 +54,6 @@
         <h1>Your Notes</h1>
         <hr>
         <div id="notes" class="row container-fluid">
-            <!-- <div class="noteCard my-2 mx-2 card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Delete</a>
-                </div>
-            </div> -->
         </div>
     </div>
 
@@ -64,7 +63,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ"
         crossorigin="anonymous"></script>
-        <script src="js/app.js"></script>
+    <script src="js/app.js"></script>
 
 </body>
 
