--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -43,8 +43,8 @@
                     <label for="floatingPassword">Note Title</label>
                 </div>
                 <div class="form-floating">
-                    <textarea class="form-control addTxt" aria-label="With textarea" rows="3"
-                        id="floatingTextarea" placeholder="discription" style="height: 100px;"></textarea>
+                    <textarea class="form-control addTxt" aria-label="With textarea" rows="3" id="floatingTextarea"
+                        placeholder="discription" style="height: 100px;"></textarea>
                     <label for="floatingTextarea">Discription</label>
                 </div>
                 <button class="btn btn-primary my-3" id="addBtn">Add Notes</button>
