--- a/Advance/website.html
+++ b/Advance/website.html
@@ -52,4 +52,5 @@
 <!-- <script src="tut18_Events.js"></script> -->
 <!-- <script src="tut20_Storage.js"></script> -->
 <script src="tut28_ObjectPrototype.js"></script>
+<!-- <script src="tut30_Prototype_Inheritence.js"></script> -->
 </html>
