--- a/Advance/website.html
+++ b/Advance/website.html
@@ -51,6 +51,6 @@
 <!-- <script src="tut17_Events&EventsObject.js"></script> -->
 <!-- <script src="tut18_Events.js"></script> -->
 <!-- <script src="tut20_Storage.js"></script> -->
-<script src="tut28_ObjectPrototype.js"></script>
-<!-- <script src="tut30_Prototype_Inheritence.js"></script> -->
+<!-- <script src="tut28_ObjectPrototype.js"></script> -->
+<script src="tut30_Prototype_Inheritence.js"></script>
 </html>
