--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -55,7 +55,7 @@
     <div class="container my-3">
       <h1>College Library</h1>
       <hr />
-      <form>
+      <form id="libraryForm">
         <div class="row mb-3">
           <label for="bookName" class="col-sm-2 col-form-label">Name</label>
           <div class="col-sm-10">
@@ -110,20 +110,12 @@
         <table class="table">
           <thead>
             <tr>
-              <th scope="col">#</th>
               <th scope="col">Name</th>
               <th scope="col">Author</th>
               <th scope="col">Category</th>
             </tr>
           </thead>
-          <tbody>
-            <tr>
-              <th scope="row">1</th>
-              <td>Mark</td>
-              <td>Otto</td>
-              <td>@mdo</td>
-            </tr>
-          </tbody>
+          <tbody id="tableBody"></tbody>
         </table>
       </div>
     </div>
