new function created to store books in loacal storage

--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -110,6 +110,7 @@
         <table class="table">
           <thead>
             <tr>
+              <th scope="col">#</th>
               <th scope="col">Name</th>
               <th scope="col">Author</th>
               <th scope="col">Category</th>
