--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -16,39 +16,30 @@
   </head>
   <body>
     <div id="customNavbar">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <nav class="navbar navbar-dark bg-primary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">College Library</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-            </ul>
-            <form class="d-flex">
-              <input
-                class="form-control me-2"
-                id="searchTxt"
-                type="search"
-                placeholder="Search"
-                aria-label="Search"
-              />
-              <button class="btn btn-outline-success btn-light" type="submit">
-                Search
-              </button>
-            </form>
-          </div>
+          <a class="navbar-brand">COLLEGE LIBRARY</a>
+          <a
+            class="nav-item"
+            target="_blank"
+            href="https://github.com/mh-saeed/JavaScript-Learning/tree/master/Project%202"
+            style="color: white; text-decoration: none; margin-right: 10px"
+            >Build by mh-saeed
+            <sup>
+              <i class="fas fa-external-link-alt"></i>
+            </sup>
+          </a>
+          <form class="d-flex">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-success btn-light" type="submit">
+              Search
+            </button>
+          </form>
         </div>
       </nav>
     </div>
@@ -101,12 +92,30 @@
             <option value="Other"></option>
           </datalist>
         </div>
-        <button type="submit" class="btn btn-primary" id="AddBook">
-          Add Book
-        </button>
+        <div
+          class="d-flex justify-content-center"
+          style="max-width: 600px; margin: 20px auto"
+        >
+          <button
+            type="submit"
+            class="btn btn-primary"
+            id="AddBook"
+            style="width: 150px"
+          >
+            Add Book
+          </button>
+          <button
+            type="submit"
+            class="btn btn-danger"
+            id="DeleteBook"
+            style="margin-left: 10px; width: 150px"
+          >
+            Delete All
+          </button>
+        </div>
       </form>
       <h2 class="my-4">All Books</h2>
-      <div id="table">
+      <div id="table" style="overflow-y: scroll; height: 300px">
         <table class="table">
           <thead>
             <tr>
@@ -114,9 +123,13 @@
               <th scope="col">Name</th>
               <th scope="col">Author</th>
               <th scope="col">Category</th>
+              <th scope="col">Action</th>
             </tr>
           </thead>
-          <tbody id="tableBody"></tbody>
+          <tbody
+            id="tableBody"
+            style="height: 300px; overflow-x: hidden; overflow-y: scroll"
+          ></tbody>
         </table>
       </div>
     </div>
@@ -124,6 +137,11 @@
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script
+      src="https://kit.fontawesome.com/c2f6a51afb.js"
+      crossorigin="anonymous"
+    ></script>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
